# tapis3_cli

./: .gitignore  Makefile  README.rst  requirements-dev.txt  requirements.txt  setup.cfg
docs/: conf.py  contents.rst  index.rst
docs/contribute/: develop.rst  docs.rst  release.rst
docs/source/: modules.rst  tapis3_cli.cache.rst  tapis3_cli.commands.local.rst  tapis3_cli.commands.local.settings.rst  tapis3_cli.commands.mixins.rst  tapis3_cli.commands.rst  tapis3_cli.commands.tapis.actors.deploy.rst  tapis3_cli.commands.tapis.actors.manage.rst  tapis3_cli.commands.tapis.actors.message.rst  tapis3_cli.commands.tapis.actors.rst  tapis3_cli.commands.tapis.authenticator.rst  tapis3_cli.commands.tapis.client.rst  tapis3_cli.commands.tapis.pgrest.rst  tapis3_cli.commands.tapis.rst  tapis3_cli.commands.tapis.sk.rst  tapis3_cli.commands.tapis.tenants.rst  tapis3_cli.project_ini.rst  tapis3_cli.project_ini.schema.rst  tapis3_cli.rst  tapis3_cli.settings.rst
docs/start/: get-in-touch.rst  help.rst  install.rst  what-is-tapis3-cli.rst
docs/usage/: _overview.rst  actors.rst  pgrest.rst  sk.rst
tapis3_cli/: __about__.py  __init__.py  constants.py  formatters.py  main.py  user_agent.py  utils.py
tapis3_cli/cache/: __init__.py  client.py  direct.py
tapis3_cli/commands/local/: statuses.py  variables.py  versions.py
tapis3_cli/commands/local/settings/: get.py  list.py  mixins.py  set.py  unset.py
tapis3_cli/commands/mixins/: __init__.py  dockerpy.py  errors.py  extend_parsers.py  extender.py  filearg.py  identifier.py  inifile.py
tapis3_cli/commands/tapis/actors/: __init__.py  actors_delete.py  actors_list.py  actors_show.py  aliases_create.py  aliases_delete.py  aliases_list.py  aliases_update.py  execs_list.py  execs_logs.py  mixins.py  nonces_create.py  nonces_delete.py  nonces_list.py  nonces_show.py
tapis3_cli/commands/tapis/actors/deploy/: actorid.py  deploy.py
tapis3_cli/commands/tapis/actors/manage/: base.py  create.py  update.py
tapis3_cli/commands/tapis/actors/message/: __init__.py  base.py  run.py  submit.py
tapis3_cli/commands/tapis/authenticator/: __init__.py  auth_init.py  auth_show.py  clients_delete.py  clients_list.py  clients_show.py  mixins.py  tokens_show.py
tapis3_cli/commands/tapis/client/: __init__.py  auth.py  basic.py  filter.py  noauth.py
tapis3_cli/commands/tapis/pgrest/: __init__.py  add_table_row.py  create_in_collection.py  create_table.py  create_view.py  delete_in_collection.py  delete_table.py  delete_table_row.py  delete_view.py  get_in_collection.py  get_manage_table.py  get_manage_view.py  get_table.py  get_table_row.py  get_table_rows.py  get_view.py  list_in_collection.py  list_tables.py  list_views.py  mixins.py  update_in_collection.py  update_table_row.py
tapis3_cli/commands/tapis/sk/: __init__.py  common.py  list_secret_meta.py  read_secret.py  write_secret.py
tapis3_cli/commands/tapis/tenants/: __init__.py  sites_list.py  tenants_list.py
tapis3_cli/project_ini/: config_file.py  templating.py
tapis3_cli/project_ini/schema/: __init__.py  actor.py  app.py  docker.py  git.py  system.py
tapis3_cli/settings/: __init__.py  auth.py  config.py  debug.py  display.py  gitserver.py  google.py  helpers.py  organization.py  projects.py  redact.py  registry.py
