    # actors_deploy = TAPIS3_CLI.clients.services:TaccApisFormatOne
# As per PEP 566
[metadata]
name = tapis3_cli
summary = Scripting interface to the Tapis V3 platform. Documentation at https://tapis3-cli.rtfd.io/
description-file = README.rst
author = Matthew Vaughn
maintainer-email = "TACC Help" <help@tacc.cloud>
author-email = "TACC Opensource" <opensource@tacc.cloud>
home-page = https://github.com/TACC-Cloud/tapis3-cli
zip_safe = False
# long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = faas, rest, web service, openapi, swagger, serverless
license = LICENSE.txt
classifier =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[build_sphinx]
builders = html,man
all-files = 1
source-dir = docs
build-dir = docs/_build

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[pbr]
autodoc_tree_index_modules = False
autodoc_tree_excludes =
    setup.py

[pylint]
disable = W0614,C0103,C0111
ignore = migrations
ignore-docstrings = yes
output-format = colorized

[flake8]
include = tapis3_cli
exclude = build,dist,docs/conf.py,*.egg-info,tests
ignore = E402,E501,F401,F403,E402,E302,E305,811
max-line-length = 140
max-complexity = 10
verbose = 0
jobs = 2
statistics = True

[yapf]
based_on_style = pep8
spaces_before_comment = 4
split_before_logical_operator = true

[tool:pytest]
python_files = test_*.py
norecursedirs = env _build tmp* offline .git *.egg-info
testpaths = tests/
addopts = -p no:warnings --cov=tapis3_cli --cov-report term
log_cli_level = ERROR
flakes-ignore =
    *.py UnusedImport ImportStarUsed

[coverage:run]
omit =

[files]
packages =
    tapis3_cli

[entry_points]
console_scripts =
    tapis3 = tapis3_cli.main:main
tapis3.cli =
    config_list = tapis3_cli.commands.local.settings:SettingsList
    config_get = tapis3_cli.commands.local.settings:SettingsGet
    config_set = tapis3_cli.commands.local.settings:SettingsSet
    config_unset = tapis3_cli.commands.local.settings:SettingsUnset
    sites_list = tapis3_cli.commands.tapis.tenants:SitesList
    tenants_list = tapis3_cli.commands.tapis.tenants:TenantsList
    auth_init = tapis3_cli.commands.tapis.authenticator:AuthInit
    auth_tokens_show = tapis3_cli.commands.tapis.authenticator:TokensShow
    actors_list = tapis3_cli.commands.tapis.actors:ActorsList
    actors_create = tapis3_cli.commands.tapis.actors:ActorsCreate
    actors_update = tapis3_cli.commands.tapis.actors:ActorsUpdate
    actors_delete = tapis3_cli.commands.tapis.actors:ActorsDelete
    auth_clients_list = tapis3_cli.commands.tapis.authenticator:ClientsList
    auth_clients_show = tapis3_cli.commands.tapis.authenticator:ClientsShow
    auth_clients_delete = tapis3_cli.commands.tapis.authenticator:ClientsDelete
    pg_tables_list = tapis3_cli.commands.tapis.pgrest:TablesList
    pg_tables_show = tapis3_cli.commands.tapis.pgrest:TablesShow
    pg_tables_create = tapis3_cli.commands.tapis.pgrest:TablesCreate
    pg_tables_delete = tapis3_cli.commands.tapis.pgrest:TablesDelete
    pg_rows_list = tapis3_cli.commands.tapis.pgrest:RowsList
    pg_rows_show = tapis3_cli.commands.tapis.pgrest:RowsShow
    pg_rows_delete = tapis3_cli.commands.tapis.pgrest:RowsDelete
    pg_rows_create = tapis3_cli.commands.tapis.pgrest:RowsCreate
    # auth_sites_list = 
    # auth_sites_show =
    # auth_tenants_list =
    # auth_tenants_show =
    # info_vars_list = tapis3_cli.commands.local.variables:VariablesList
