    # actors_deploy = TAPIS3_CLI.clients.services:TaccApisFormatOne
# As per PEP 566
[metadata]
name = tapis3_cli
summary = Scripting interface to the Tapis V3 platform. Documentation at https://tapis3-cli.rtfd.io/
description-file = README.rst
author = Matthew Vaughn
maintainer-email = "TACC Help" <help@tacc.cloud>
author-email = "TACC Opensource" <opensource@tacc.cloud>
home-page = https://github.com/TACC-Cloud/tapis3-cli
zip_safe = False
# long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = faas, rest, web service, openapi, swagger, serverless
license = LICENSE.txt
classifier =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[build_sphinx]
builders = html,man
all-files = 1
source-dir = docs
build-dir = docs/_build

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[pbr]
autodoc_tree_index_modules = False
autodoc_tree_excludes =
    setup.py

[pylint]
disable = W0614,C0103,C0111
ignore = migrations
ignore-docstrings = yes
output-format = colorized

[flake8]
include = tapis3_cli
exclude = build,dist,docs/conf.py,*.egg-info,tests
ignore = E402,E501,F401,F403,E402,E302,E305,811
max-line-length = 140
max-complexity = 10
verbose = 0
jobs = 2
statistics = True

[yapf]
based_on_style = pep8
spaces_before_comment = 4
split_before_logical_operator = true

[tool:pytest]
python_files = test_*.py
norecursedirs = env _build tmp* offline .git *.egg-info
testpaths = tests/
addopts = -p no:warnings --cov=tapis3_cli --cov-report term
log_cli_level = ERROR
flakes-ignore =
    *.py UnusedImport ImportStarUsed

[coverage:run]
omit =

[files]
packages =
    tapis3_cli

[entry_points]
console_scripts =
    tapis3 = tapis3_cli.main:main
tapis3.cli =
    config_list = tapis3_cli.commands.local.settings:SettingsList
    config_get = tapis3_cli.commands.local.settings:SettingsGet
    config_set = tapis3_cli.commands.local.settings:SettingsSet
    config_unset = tapis3_cli.commands.local.settings:SettingsUnset
    sites_list = tapis3_cli.commands.tapis.tenants:SitesList
    tenants_list = tapis3_cli.commands.tapis.tenants:TenantsList
    auth_init = tapis3_cli.commands.tapis.authenticator:AuthInit
    auth_show = tapis3_cli.commands.tapis.authenticator:AuthShow
    actors_list = tapis3_cli.commands.tapis.actors:ActorsList
    actors_create = tapis3_cli.commands.tapis.actors:ActorsCreate
    actors_update = tapis3_cli.commands.tapis.actors:ActorsUpdate
    actors_delete = tapis3_cli.commands.tapis.actors:ActorsDelete
    actors_aliases_list = tapis3_cli.commands.tapis.actors:AliasesList
    actors_aliases_create = tapis3_cli.commands.tapis.actors:AliasesCreate
    actors_aliases_delete = tapis3_cli.commands.tapis.actors:AliasesDelete
    actors_aliases_update = tapis3_cli.commands.tapis.actors:AliasesUpdate
    actors_nonces_list = tapis3_cli.commands.tapis.actors:NoncesList
    actors_nonces_create = tapis3_cli.commands.tapis.actors:NoncesCreate
    actors_nonces_delete = tapis3_cli.commands.tapis.actors:NoncesDelete
    actors_nonces_show = tapis3_cli.commands.tapis.actors:NoncesShow
    # actors_run = tapis3_cli.commands.tapis.actors:ActorsRun
    actors_submit = tapis3_cli.commands.tapis.actors:ActorsSubmit
    actors_execs_logs = tapis3_cli.commands.tapis.actors:ActorsExecsLogs
    actors_execs_list = tapis3_cli.commands.tapis.actors:ActorsExecsList
    actors_deploy = tapis3_cli.commands.tapis.actors:ActorsDeploy
    auth_clients_list = tapis3_cli.commands.tapis.authenticator:ClientsList
    auth_clients_show = tapis3_cli.commands.tapis.authenticator:ClientsShow
    auth_clients_delete = tapis3_cli.commands.tapis.authenticator:ClientsDelete
    pg_tables_man_list = tapis3_cli.commands.tapis.pgrest:TablesList
    pg_tables_man_show = tapis3_cli.commands.tapis.pgrest:TablesShow
    pg_tables_man_create = tapis3_cli.commands.tapis.pgrest:TablesCreate
    pg_tables_man_delete = tapis3_cli.commands.tapis.pgrest:TablesDelete
    pg_rows_list = tapis3_cli.commands.tapis.pgrest:RowsList
    pg_rows_show = tapis3_cli.commands.tapis.pgrest:RowsShow
    pg_rows_delete = tapis3_cli.commands.tapis.pgrest:RowsDelete
    pg_rows_create = tapis3_cli.commands.tapis.pgrest:RowsCreate
    pg_rows_update = tapis3_cli.commands.tapis.pgrest:RowsUpdate
    pg_views_man_list = tapis3_cli.commands.tapis.pgrest:ViewsList
    pg_views_man_create = tapis3_cli.commands.tapis.pgrest:ViewsCreate
    pg_views_man_delete = tapis3_cli.commands.tapis.pgrest:ViewsDelete
    pg_views_man_show = tapis3_cli.commands.tapis.pgrest:ViewsShow
    pg_views_rows_list = tapis3_cli.commands.tapis.pgrest:ViewsRowsList
    # pg_views_list = tapis3_cli.commands.tapis.pgrest:ViewsList
    sk_secrets_list = tapis3_cli.commands.tapis.sk:SecretsList
    sk_secrets_write = tapis3_cli.commands.tapis.sk:SecretsWrite
    sk_secrets_read = tapis3_cli.commands.tapis.sk:SecretsRead
    # auth_sites_list = 
    # auth_sites_show =
    # auth_tenants_list =
    # auth_tenants_show =
    # info_vars_list = tapis3_cli.commands.local.variables:VariablesList
